B.2 & B.3 - Created ability to generate course reports with search functionality to filter by Course Start Date.

--- a/WGUTermTracker/Views/TermDetailsPage.xaml
+++ b/WGUTermTracker/Views/TermDetailsPage.xaml
@@ -76,6 +76,17 @@
                         Style="{StaticResource PageDeleteButtonStyle}"/>
                 </HorizontalStackLayout>
 
+                <!-- Course Start Date Report Button -->
+                <HorizontalStackLayout 
+                    HorizontalOptions="Center" 
+                    Spacing="20">
+                    
+                    <Button 
+                        Text="Start Date Report"
+                        Clicked="OnCourseStartDateReportButtonClicked"
+                        Style="{StaticResource PageViewButtonStyle}" />
+                </HorizontalStackLayout>
+
                 <!-- Courses List -->
                 <CollectionView
                     x:Name="coursesCollectionView"
